@@ -25,6 +25,7 @@
 10. When parsing podcast RSS, if episode is marked as video (e.g. video/mp4) but
     the url ends in an audio extension then use it is proably an audio podcast.
 11. Correctly initialise seach category.
+12. Fix potential crashes on refresh.
 
 1.5.1
 -----
